--- a/index.html
+++ b/index.html
@@ -9,9 +9,13 @@
 </head>
 <body>
     <div id="container">
-        <div id="player"></div>
-        <div id="block"></div>
+        <div id="text">Text</div>
+        <div id="option-buttons" class="button-grid">
+            <button class="button">Option 1</button>
+            <button class="button">Option 2</button>
+            <button class="button">Option 3</button>
+            <button class="button">Option 4</button>
+        </div>
     </div>
 </body>
-<script src="script.js"></script>
 </html>
