--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Game</title>
     <link rel="stylesheet" href="style.css">
+    <script defer src="script.js"></script>
 </head>
 <body>
-    <div id="container">
+    <div class="container">
         <div id="text">Text</div>
         <div id="option-buttons" class="button-grid">
             <button class="button">Option 1</button>
