--- a/index.html
+++ b/index.html
@@ -6,16 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Game</title>
     <link rel="stylesheet" href="style.css">
-    <script defer src="script.js"></script>
+    <script defer src="script.js">k</script>
 </head>
 <body>
     <div class="container">
-        <div id="text">Text</div>
-        <div id="option-buttons" class="button-grid">
-            <button class="button">Option 1</button>
-            <button class="button">Option 2</button>
-            <button class="button">Option 3</button>
-            <button class="button">Option 4</button>
+        <div id="question-container" class="hide">
+            <div id="question">Question</div>
+            <div id="answer-buttons" class="button-grid">
+                <button class="button">Answer 1</button>
+                <button class="button">Answer 2</button>
+                <button class="button">Answer 3</button>
+                <button class="button">Answer 4</button>
+            </div>
+        </div>
+        <div class="controls">
+            <button id="start-button" class="start-button button">Start</button>
+            <button id="next-button" class="next-button button hide">Next</button>
         </div>
     </div>
 </body>
