--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
 </head>
 <body>
     <div class="container">
+        <header>
+            <div id="question" class="hide">Question</div>
+            <div id="score" class="hide">Score: 9</div>
+        </header>
         <div id="question-container" class="hide">
-            <div id="question">Question</div>
             <div id="answer-buttons" class="button-grid">
                 <button class="button">Answer 1</button>
                 <button class="button">Answer 2</button>
